Create performances section without JS

--- a/src/pages/sections/secondSection.html
+++ b/src/pages/sections/secondSection.html
@@ -1,3 +1,17 @@
 <section>
+    <div class="iconContainer">
 
+    </div>
+
+    <div class="perfContainer">
+
+    </div>
+
+    <div class="imgContainer">
+
+    </div>
+
+    <div class="statsContainer">
+
+    </div>
 </section>
